foundation/cilium-ns.yaml
---
# cilium requires privileged access
apiVersion: v1
kind: Namespace
metadata:
  name: cilium-system
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/enforce-version: v1.28
    pod-security.kubernetes.io/warn: privileged
    pod-security.kubernetes.io/warn-version: v1.28
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/audit-version: v1.28
