foundation/argocd-resources.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  namespace: argocd
  name: argocd-server
spec:
  parentRefs:
    - namespace: cilium-system
      name: web-gateway
      sectionName: https-bacchus-io
  hostnames:
    - argocd.bacchus.io
  rules:
    - backendRefs:
        - name: argocd-server
          port: 80
