foundation/dexidp-resources.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  namespace: dexidp
  name: dexidp
spec:
  parentRefs:
    - namespace: cilium-system
      name: web-gateway
      sectionName: https-bacchus-io
  hostnames:
    - auth.bacchus.io
  rules:
    - backendRefs:
        - name: dex
          port: 5556
