foundation/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  namespace: cilium-system
  name: web-gateway
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  gatewayClassName: cilium
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    # Upstream bug, *all* listeners have to accept routes
    # ref: https://github.com/cilium/cilium/issues/28186
    allowedRoutes:
      namespaces:
        from: All
  - name: https-snucse-org
    protocol: HTTPS
    port: 443
    hostname: '*.snucse.org'
    tls:
      certificateRefs:
      - name: web-gateway-certs
    allowedRoutes:
      namespaces:
        from: All
  - name: https-bacchus-io
    protocol: HTTPS
    port: 443
    hostname: '*.bacchus.io'
    tls:
      certificateRefs:
      - name: web-gateway-certs
    allowedRoutes:
      namespaces:
        from: All
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  namespace: cilium-system
  name: web-gateway-https-redirect
spec:
  parentRefs:
    - name: web-gateway
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
